--- a/app/src/main/res/layout/activity_client_page.xml
+++ b/app/src/main/res/layout/activity_client_page.xml
@@ -14,20 +14,20 @@
         android:layout_centerHorizontal="true">
 
         <Button
-            android:id="@+id/home_page_client_b"
+            android:id="@+id/client_page_pizzas_b"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/home_page_client_b"
+            android:text="@string/client_page_pizzas_b"
             android:layout_marginBottom="20dip"
-            android:onClick="goClient"/>
+            android:onClick="goPizzas"/>
 
         <Button
-            android:id="@+id/home_page_admin_b"
+            android:id="@+id/client_page_orders_b"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/home_page_admin_b"
+            android:text="@string/client_page_orders_b"
             android:layout_marginTop="20dip"
-            android:onClick="goAdmin"/>
+            android:onClick="goOrders"/>
 
     </LinearLayout>
 
