--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -18,16 +18,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/home_page_client_b"
-            android:layout_marginBottom="20dip"
-            android:onClick="goClient"/>
+            android:layout_marginBottom="20dip"/>
 
         <Button
             android:id="@+id/home_page_admin_b"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/home_page_admin_b"
-            android:layout_marginTop="20dip"
-            android:onClick="goAdmin"/>
+            android:layout_marginTop="20dip"/>
 
     </LinearLayout>
 
